Fixed login bug which was causing the image in the header to move offscreen whenever a user clicked on the Password Field

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -85,10 +85,6 @@
     text-align: left;
   }
 
-.header {
-
-}
-
 .input-wrapper {
   height: 65px;
 }
